<resources>
    <string name="app_name">Level-APP!</string>
    <string name="choose">Choose Role</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_main_menu_gm">MainMenuGM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="guildName">Guild Name</string>
    <string name="guildSubject">Subject</string>
    <string name="levelRequirement">Level Requirement</string>
    <string name="createGuild">Create Guild</string>
    <string name="back_to_main">Back to Main Menu</string>


    <string name="questName">Quest Name</string>
    <string name="questSubject">Quest Description</string>
    <string name="questPoint">Reward Point</string>
    <string name="questExp">Reward Exp</string>
    <string name="createquest">Create Quest</string>
    <string name="back_to_guild">Back to Main</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_guide_book">Create Guide Book</string>
    <string name="list_guide_book">List Guide Book</string>
    <string name="create_quest">Create Quest</string>
    <string name="list_quest">List Quest</string>
</resources>
